; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_adx_wdt.c_adx_wdt_start_locked.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_adx_wdt.c_adx_wdt_start_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adx_wdt = type { i32, i64 }

@ADX_WDT_CONTROL = common dso_local global i64 0, align 8
@ADX_WDT_CONTROL_ENABLE = common dso_local global i32 0, align 4
@WDT_STATE_START = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.adx_wdt*)* @adx_wdt_start_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @adx_wdt_start_locked(%struct.adx_wdt* %0) #0 {
  %2 = alloca %struct.adx_wdt*, align 8
  %3 = alloca i32, align 4
  store %struct.adx_wdt* %0, %struct.adx_wdt** %2, align 8
  %4 = load %struct.adx_wdt*, %struct.adx_wdt** %2, align 8
  %5 = getelementptr inbounds %struct.adx_wdt, %struct.adx_wdt* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @ADX_WDT_CONTROL, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @readl(i64 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* @ADX_WDT_CONTROL_ENABLE, align 4
  %11 = load i32, i32* %3, align 4
  %12 = or i32 %11, %10
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load %struct.adx_wdt*, %struct.adx_wdt** %2, align 8
  %15 = getelementptr inbounds %struct.adx_wdt, %struct.adx_wdt* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @ADX_WDT_CONTROL, align 8
  %18 = add nsw i64 %16, %17
  %19 = call i32 @writel(i32 %13, i64 %18)
  %20 = load i32, i32* @WDT_STATE_START, align 4
  %21 = load %struct.adx_wdt*, %struct.adx_wdt** %2, align 8
  %22 = getelementptr inbounds %struct.adx_wdt, %struct.adx_wdt* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 8
  ret void
}

declare dso_local i32 @readl(i64) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
